--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "mockjs": "^1.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
